--- a/public/sommer.html
+++ b/public/sommer.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <div class="header">
-        <a href="hjemmeside.html"><img src="img/museum_header.jpg" alt="Header"></a>
+        <a href="index.html"><img src="img/museum_header.jpg" alt="Header"></a>
         
     </div>  
     <div class="navbar">
-        <a href="hjemmeside.html" target="_self">Hjem</a>
+        <a href="index.html" target="_self">Hjem</a>
         <a href="om_oss.html" target="_self">Om oss</a>
         <a href="hendelser.html" target="_self">Hva skjer?</a>
         <a href="nettutstillinger.html" target="_self">Nettutstillinger</a>
